--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "startDev": "nodemon index.js"
+    "start": "node -r esm index.js",
+    "startDev": "nodemon -r esm index.js"
   },
   "repository": {
     "type": "git",
