--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "esm": "^3.2.25",
     "express": "^4.17.1",
     "kafkajs": "^1.15.0",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "winston": "^3.3.3"
   }
 }
