develop client for SASSL auth or plain

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/aaronwolmutt/kafkajs-observability-api#readme",
   "devDependencies": {
+    "dotenv": "^10.0.0",
     "eslint": "^8.0.1",
     "eslint-config-google": "^0.14.0",
     "nodemon": "^2.0.13"
